<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ Copyright (c) 2020-2021 Rich Braithwaite (rbraithwaite.dev@gmail.com)
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <https://www.gnu.org/licenses/>.
  -->

<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/session_archive_list_item_card"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="8dp"
    android:layout_marginRight="8dp"
    android:theme="@style/ArchiveListItemTheme">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/session_archive_list_item_start"
            style="@style/ArchiveListItemTimeTitleStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/session_archive_list_item_start"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/session_archive_list_item_rating" />

        <TextView
            android:id="@+id/session_archive_list_item_start_VALUE"
            style="@style/ArchiveListItemTimeValueStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            app:layout_constraintBaseline_toBaselineOf="@+id/session_archive_list_item_start"
            app:layout_constraintStart_toEndOf="@+id/session_archive_title_barrier"
            tools:text="2:20 am, Feb 20 2020" />

        <TextView
            android:id="@+id/session_archive_list_item_stop"
            style="@style/ArchiveListItemTimeTitleStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/session_archive_list_item_stop"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/session_archive_list_item_start" />

        <TextView
            android:id="@+id/session_archive_list_item_stop_VALUE"
            style="@style/ArchiveListItemTimeValueStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            app:layout_constraintBaseline_toBaselineOf="@+id/session_archive_list_item_stop"
            app:layout_constraintStart_toEndOf="@+id/session_archive_title_barrier"
            tools:text="2:20 am, Feb 20 2020" />

        <TextView
            android:id="@+id/session_archive_list_item_duration_VALUE"
            style="@style/ArchiveListItemDurationStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="8dp"
            app:layout_constraintBottom_toTopOf="@id/session_archive_list_item_interruptions_VALUE"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/session_archive_list_item_stop"
            app:layout_goneMarginBottom="16dp"
            tools:text="1h 23m 45s" />

        <TextView
            android:id="@+id/session_archive_list_item_interruptions_VALUE"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/error"
            android:textColor="?attr/appColorInterruption"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/session_archive_list_item_duration_VALUE"
            tools:text="3h 45m 45s (4)" />

        <ImageView
            android:id="@+id/session_archive_list_item_comment_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toEndOf="@+id/session_archive_time_barrier"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_archive_list_item_comment"
            android:contentDescription="@string/content_description_session_archive_list_item_comment_icon"/>

        <FrameLayout
            android:id="@+id/session_archive_list_item_mood_frame"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toEndOf="@+id/session_archive_list_item_comment_icon"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_goneMarginLeft="0dp">

            <com.rbraithwaite.sleeptarget.ui.common.views.mood_selector.TEMP.MoodView
                android:id="@+id/session_archive_list_item_mood"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:tint="?attr/colorPrimary" />
        </FrameLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/session_archive_list_item_tags"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="22dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_max="75dp"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/session_archive_list_item_start_VALUE"
            app:layout_constraintTop_toBottomOf="@+id/session_archive_comments_mood_barrier"
            app:layout_constraintVertical_bias="0.0" />

        <RatingBar
            android:id="@+id/session_archive_list_item_rating"
            style="@style/Widget.AppCompat.RatingBar.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:clickable="false"
            android:isIndicator="true"
            android:theme="@style/ArchiveRatingBarTheme"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/session_archive_title_barrier"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="right"
            app:constraint_referenced_ids="session_archive_list_item_start,session_archive_list_item_stop"
            tools:layout_editor_absoluteX="395dp" />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/session_archive_comments_mood_barrier"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="bottom"
            app:constraint_referenced_ids="session_archive_list_item_comment_icon,session_archive_list_item_mood_frame"
            tools:layout_editor_absoluteY="142dp" />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/session_archive_time_barrier"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="right"
            app:barrierMargin="24dp"
            app:constraint_referenced_ids="session_archive_list_item_start_VALUE,session_archive_list_item_stop_VALUE"
            tools:layout_editor_absoluteX="395dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>
