<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/session_edit_menuitem_cancel"
        android:icon="@drawable/ic_baseline_close_24"
        android:title="Cancel"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/session_edit_menuitem_confirm"
        android:icon="@drawable/ic_baseline_check_24"
        android:title="Confirm"
        app:showAsAction="ifRoom" />
</menu>